[package]
name = "hello-termion"
version = "0.1.0"
authors = ["nmrshll <marshall.nicolas@gmail.com>"]

[dependencies]
termion = "1.5.1"
tui = { git = "https://github.com/fdehau/tui-rs" }
log = "0.4"
failure = "0.1.3"
rand = "0.6"
unicode-segmentation = "1.2"
unicode-width = "0.1"

[dev-dependencies]
stderrlog = "0.4"